--- a/src/lib/components/Date.astro
+++ b/src/lib/components/Date.astro
@@ -2,7 +2,7 @@
 import { formatDate } from "$lib/utils";
 
 interface Props {
-  date: Date | string;
+  date: Date | string | undefined;
   showText?: boolean;
 }
 
@@ -11,5 +11,9 @@ const { date, showText } = Astro.props;
 const format = formatDate(date);
 ---
 
-{showText && <span>Published {format.isRelativeTime ? "" : "on "}</span>}
-<time datetime={String(date)}>{format.date}</time>
+{
+  format && showText && (
+    <span>Published {format.isRelativeTime ? "" : "on "}</span>
+  )
+}
+{format && <time datetime={String(date)}>{format.date}</time>}
