--- a/src/lib/styles/fonts.css
+++ b/src/lib/styles/fonts.css
@@ -29,3 +29,35 @@
   font-display: swap;
   font-style: normal;
 }
+
+@font-face {
+  font-family: Lotion;
+  src: url('/fonts/Lotion-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Lotion;
+  src: url('/fonts/Lotion-RegularItalic.woff2') format('woff2');
+  font-weight: 400;
+  font-display: swap;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: Lotion;
+  src: url('/fonts/Lotion-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: Lotion;
+  src: url('/fonts/Lotion-BoldItalic.woff2') format('woff2');
+  font-weight: 700;
+  font-display: swap;
+  font-style: italic;
+}
