--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,17 @@
 ---
 import { POST_COUNT } from "$config";
+import { blogs } from "$lib/utils";
 import Body from "@/Body.astro";
 import Posts from "@/Posts.astro";
-import { getCollection } from "astro:content";
-
-const blogs = await getCollection("blog");
 ---
 
 <Body>
 	<hgroup data-animate-container>
-		<h1 data-animate>Fallen&apos;s tech blogs</h1>
+		<h1>Fallen&apos;s tech blogs</h1>
 		<p data-animate>A final year CS student</p>
 	</hgroup>
 
-	<div data-animate-container>
+	<section data-animate-container>
 		<p data-animate>
 			Hi, I'm Rishav, known as Fallen on GitHub and here I share my experiences
 			and discoveries in the ever-evolving world of technology.
@@ -22,28 +20,29 @@ const blogs = await getCollection("blog");
 			I'm an under graduate CS student completing B.Tech and with 3 years of
 			experience in web development.
 		</p>
-	</div>
+	</section>
 
-	<div class="banner" data-animate-post>
+	<section class="banner" data-animate-post>
 		<strong>Latest blogs</strong>
 
 		<a href="/blog" class="contrast">See all</a>
-	</div>
+	</section>
 
-	<Posts posts={blogs} count={POST_COUNT} />
+	<section>
+		<Posts posts={blogs} count={POST_COUNT} />
+	</section>
 
-	<div data-animate-container>
+	<section data-animate-container>
 		<a href="/blog" role="button" class="contrast" data-animate-post
 			>See all blogs</a
 		>
-	</div>
+	</section>
 </Body>
 
 <style>
 	.banner {
 		display: flex;
 		justify-content: space-between;
-		margin-bottom: var(--block-spacing-vertical);
 	}
 
 	hgroup p {
