--- a/src/lib/components/Breadcrubms.astro
+++ b/src/lib/components/Breadcrubms.astro
@@ -17,6 +17,10 @@ routes.pop();
 </p>
 
 <style>
+  p {
+    font-size: var(--fs-small);
+  }
+
   a {
     color: var(--md-sys-color-tertiary);
   }
