--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,51 +1,9 @@
 ---
-import { POST_COUNT } from "$config";
-import { blogs } from "$lib/utils";
-import Body from "@/Body.astro";
-import Posts from "@/Posts.astro";
+import { BlogPost, Body } from "$lib/components";
 ---
 
 <Body>
-	<hgroup data-animate-container>
-		<h1>Fallen&apos;s tech blogs</h1>
-		<p data-animate>A final year CS student</p>
-	</hgroup>
+	<h6>Blogs</h6>
 
-	<section data-animate-container>
-		<p data-animate>
-			Hi, I'm Rishav, known as Fallen on GitHub and here I share my experiences
-			and discoveries in the ever-evolving world of technology.
-		</p>
-		<p data-animate>
-			I'm an under graduate CS student completing B.Tech and with 3 years of
-			experience in web development.
-		</p>
-	</section>
-
-	<section class="banner" data-animate-post>
-		<strong>Latest blogs</strong>
-
-		<a href="/blog" class="contrast">See all</a>
-	</section>
-
-	<section>
-		<Posts posts={blogs} count={POST_COUNT} />
-	</section>
-
-	<section data-animate-container>
-		<a href="/blog" role="button" class="contrast" data-animate-post
-			>See all blogs</a
-		>
-	</section>
+	<BlogPost />
 </Body>
-
-<style>
-	.banner {
-		display: flex;
-		justify-content: space-between;
-	}
-
-	hgroup p {
-		margin-bottom: 0;
-	}
-</style>
