--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,34 @@ import { BlogPost, Body } from "$lib/components";
 ---
 
 <Body>
-	<h6>Blogs</h6>
+	<section>
+		<hgroup data-animate-container>
+			<h1 data-animate>Fallen&apos;s tech blogs</h1>
+			<p data-animate>A final year CS student</p>
+		</hgroup>
+		<div data-animate-container>
+			<p data-animate>
+				Hi, I'm Rishav, known as Fallen on GitHub and here I share my
+				experiences and discoveries in the ever-evolving world of technology.
+			</p>
+			<p data-animate>
+				I'm an under graduate CS student completing B.Tech and with 3 years of
+				experience in web development.
+			</p>
+		</div>
+	</section>
 
-	<BlogPost />
+	<div class="heading-link">
+		<h6>Latest blogs</h6>
+		<a href="/blog">See all</a>
+	</div>
+
+	<BlogPost count={6} />
 </Body>
+
+<style>
+	.heading-link {
+		display: flex;
+		justify-content: space-between;
+	}
+</style>
